--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--añadir título de página (nombre del alumno) -->
-    <!--añadir ícono de página de https://fontawesome.com/-->
-</head>
+    <!--añadir título de página (nombre del alumno) --> <title>Hugo Fernández</title>
+    <!--añadir ícono de página de https://fontawesome.com/--><link rel="icon" href="img/jedi-order.svg">
 <body>
     <h1>Web Browsers</h1>
     <p>The purpose of a web browser (<a href="https://www.google.com/intl/es/chrome/">Chrome</a>, <a href="https://www.microsoft.com/es-es/edge">Edge</a>, <a href="https://www.mozilla.org/es-ES/firefox/">Firefox</a>, <a href="https://www.apple.com/es/safari/">Safari</a>) is to read HTML documents and display them correctly.</p>
@@ -15,6 +14,6 @@
     <hr/>
     <h1>HTML Page Structure</h1>
     <p>Below is a visulization of an HTML page structure:</p>
-    <!--añadir imagen 2: "img2.png" y utilizar un ancho de 100% de imagen-->
+    <!--añadir imagen 2: "img2.png" y utilizar un ancho de 100% de imagen--><img src="./img/img2.png" alt="imagen" width="100%">
 </body>
 </html>
