--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--añadir título de página (nombre del alumno) --> <title>Hugo Fernández</title>
     <!--añadir ícono de página de https://fontawesome.com/--><link rel="icon" href="img/jedi-order.svg">
-<body>
+</head>
+    <body>
     <h1>Web Browsers</h1>
     <p>The purpose of a web browser (<a href="https://www.google.com/intl/es/chrome/">Chrome</a>, <a href="https://www.microsoft.com/es-es/edge">Edge</a>, <a href="https://www.mozilla.org/es-ES/firefox/">Firefox</a>, <a href="https://www.apple.com/es/safari/">Safari</a>) is to read HTML documents and display them correctly.</p>
     <p>A browser does not display the HTML tags, but uses them to determine how to display the document:</p>
